--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;700;900&display=swap" rel="stylesheet">
     <style>
         :root {
+            /* Design System Colors */
             --deep-green: #1B4D3E;
             --luxury-gold: #D4AF37;
             --bg-cream: #F8F9FA;
@@ -34,6 +35,7 @@
             color: var(--text-dark);
             line-height: 1.6;
             -webkit-font-smoothing: antialiased;
+            /* Background Texture */
             background-image: radial-gradient(rgba(27, 77, 62, 0.03) 1.2px, transparent 1.2px);
             background-size: 35px 35px;
         }
@@ -44,7 +46,7 @@
             padding: 20px;
         }
 
-        /* כותרת סטטוס */
+        /* Top status and headline section */
         .top-status {
             text-align: center;
             padding: 40px 0 10px;
@@ -77,7 +79,7 @@
             background-color: var(--deep-green);
             color: var(--luxury-gold);
             display: inline-block;
-            padding: 12px 30px;
+            padding: 14px 35px;
             border-radius: 12px;
             font-weight: 700;
             font-size: 1.1rem;
@@ -99,10 +101,9 @@
             font-size: 1.15rem;
             color: #555;
             text-align: center;
-            margin-bottom: 40px;
         }
 
-        /* כרטיסיית זכוכית מרכזית */
+        /* Glassmorphism content card */
         .glass-card {
             background: var(--white-glass);
             backdrop-filter: blur(20px);
@@ -157,25 +158,27 @@
         .image-showcase {
             text-align: center;
             margin: 40px 0;
+            display: flex;
+            justify-content: center;
         }
 
-        /* תצוגת הספר ביחס A4 לאורך */
+        /* Portrait A4 ratio for the book image */
         .book-preview {
             width: 100%;
             max-width: 380px;
-            aspect-ratio: 1 / 1.414; /* יחס A4 לאורך */
-            object-fit: cover;
-            border-radius: 20px;
-            box-shadow: 0 25px 50px rgba(0,0,0,0.12);
-            border: 1px solid #ddd;
+            aspect-ratio: 1 / 1.414;
+            object-fit: contain;
+            border-radius: 16px;
+            box-shadow: 0 20px 50px rgba(0,0,0,0.1);
             transition: transform 0.6s ease;
+            background-color: white;
         }
 
         .book-preview:hover {
             transform: scale(1.02);
         }
 
-        /* קופסת מחיר נקייה ואלגנטית */
+        /* Pricing module */
         .pricing-box {
             background: #fff;
             border-radius: 28px;
@@ -193,43 +196,31 @@
             font-size: 1.1rem;
         }
 
-        .price-comparison-text {
-            font-size: 1.2rem;
-            color: #aaa;
-            margin-bottom: 10px;
-            font-weight: 400;
-        }
-
-        .price-comparison-text .strike-out {
-            text-decoration: line-through;
-            margin: 0 5px;
-            opacity: 0.6;
-        }
-
         .price-main-display {
             color: var(--deep-green);
-            font-size: 4.5rem;
+            font-size: 5rem;
             font-weight: 900;
             line-height: 1;
             margin-bottom: 30px;
             display: flex;
             align-items: center;
             justify-content: center;
-            gap: 5px;
+            gap: 8px;
         }
 
         .price-main-display .only-prefix {
-            font-size: 1.5rem;
+            font-size: 1.8rem;
             font-weight: 700;
             margin-left: 5px;
         }
 
         .price-main-display .currency-symbol {
-            font-size: 1.8rem;
+            font-size: 2rem;
             vertical-align: super;
             font-weight: 700;
         }
 
+        /* Call to Action button */
         .cta-btn {
             background-color: var(--luxury-gold);
             color: #fff;
@@ -255,6 +246,7 @@
             box-shadow: 0 18px 38px rgba(212, 175, 55, 0.28);
         }
 
+        /* Countdown timer styles */
         .timer-row {
             margin-top: 40px;
             display: flex;
@@ -267,16 +259,16 @@
         #timer-val {
             background: var(--deep-green);
             color: #fff;
-            padding: 12px 30px;
+            padding: 12px 35px;
             border-radius: 16px;
             font-weight: 900;
-            font-size: 2.5rem;
-            min-width: 180px;
+            font-size: 2.8rem;
+            min-width: 200px;
             text-align: center;
             box-shadow: 0 8px 20px rgba(27, 77, 62, 0.15);
         }
 
-        /* קהילה */
+        /* Secondary actions - WhatsApp */
         .community-footer {
             background: #fff;
             padding: 40px;
@@ -312,8 +304,8 @@
 
         @media (max-width: 600px) {
             .features-grid { grid-template-columns: 1fr; }
-            .price-main-display { font-size: 3.5rem; }
-            #timer-val { font-size: 2rem; min-width: 150px; }
+            .price-main-display { font-size: 4rem; }
+            #timer-val { font-size: 2.2rem; min-width: 160px; }
             .cta-btn { width: 100%; min-width: unset; }
             .book-preview { max-width: 300px; }
         }
@@ -382,17 +374,13 @@
             </div>
 
             <div class="image-showcase">
-                <!-- שימוש בתמונה שהועלתה: image_0a8c28.png -->
-                <img src="image_0a8c28.png" alt="ספר המתכונים - רבקה הולצברג" class="book-preview">
+                <!-- שימוש בשם הקובץ המדויק כפי שצוין: image.png -->
+                <img src="image.png" alt="ספר המתכונים המלא - רבקה הולצברג" class="book-preview">
             </div>
 
             <div class="pricing-box">
                 <p id="offer-status-text">הטבה בלעדית למצטרפות חדשות (ל-15 דקות הקרובות):</p>
                 
-                <div id="price-comparison" class="price-comparison-text">
-                    <span class="strike-out">₪129</span> <span class="strike-out">₪99</span>
-                </div>
-
                 <div class="price-main-display">
                     <span class="only-prefix">רק</span>
                     <span id="price-val">89</span>
@@ -431,22 +419,24 @@
     </div>
 
     <script>
+        // Links from Invoice4u and timer settings
         const DISCOUNT_LINK = "https://private.invoice4u.co.il/newsite/he/clearing/public/i4u-clearing?ProductGuid=78547b55-6474-4095-a177-9cb605ce3fc1"; 
         const REGULAR_LINK = "https://private.invoice4u.co.il/newsite/he/clearing/public/i4u-clearing?ProductGuid=01f99036-3332-4744-a2bc-1a6f96893572";  
-        const TIMER_DURATION = 15 * 60;
+        const TIMER_DURATION = 15 * 60; // 15 minutes in seconds
 
         function initOTO() {
             const timerDisplay = document.getElementById('timer-val');
             const ctaBtn = document.getElementById('main-cta');
             const priceVal = document.getElementById('price-val');
             const offerText = document.getElementById('offer-status-text');
-            const priceComparison = document.getElementById('price-comparison');
             const timerContainer = document.getElementById('timer-container');
             
+            // Per-device timer logic using localStorage
             let endTime = localStorage.getItem('oto_end_time');
             const now = Math.floor(Date.now() / 1000);
 
             if (!endTime) {
+                // Set the end time for the first visit
                 endTime = now + TIMER_DURATION;
                 localStorage.setItem('oto_end_time', endTime);
             }
@@ -456,10 +446,10 @@
                 const remaining = endTime - currentTime;
 
                 if (remaining <= 0) {
+                    // Offer expired
                     timerDisplay.textContent = "00:00";
                     ctaBtn.href = REGULAR_LINK; 
-                    priceVal.textContent = "99";
-                    priceComparison.style.display = "none";
+                    priceVal.textContent = "99"; // Set regular price
                     offerText.textContent = "ההטבה המיוחדת הסתיימה, אך עדיין ניתן לרכוש במחיר מבצע:";
                     timerContainer.style.opacity = "0.5";
                     clearInterval(timerInterval);
