--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
             padding: 20px;
         }
 
-        /* Top status and header */
         .top-status {
             text-align: center;
             padding: 40px 0 20px;
@@ -76,25 +75,53 @@
             line-height: 1.3;
         }
 
-        /* 3D Book Display */
+        /* Enhanced 3D Book Logic */
         .book-container {
-            perspective: 1200px;
-            margin: 30px 0;
+            perspective: 1500px; /* Increased perspective depth */
+            margin: 50px 0;
             display: flex;
             justify-content: center;
+            align-items: center;
+        }
+
+        .book-wrapper {
+            position: relative;
+            transform-style: preserve-3d;
+            transform: rotateY(18deg) rotateX(5deg); /* Stronger angles */
+            transition: transform 0.8s cubic-bezier(0.2, 0.8, 0.2, 1);
+        }
+
+        .book-wrapper:hover {
+            transform: rotateY(8deg) rotateX(2deg) scale(1.02);
         }
 
         .book-3d {
             width: 100%;
-            max-width: 260px;
+            max-width: 270px;
             aspect-ratio: 1 / 1.414;
             object-fit: cover;
-            border-radius: 4px 4px 12px 12px;
-            box-shadow: 12px 12px 35px rgba(0,0,0,0.15);
-            transform: rotateY(10deg) rotateX(4deg);
-            transition: transform 0.6s ease;
-            background-color: white;
-            border-right: 8px solid #ececec;
+            border-radius: 3px 6px 6px 3px;
+            display: block;
+            box-shadow: 15px 20px 45px rgba(0,0,0,0.2);
+            position: relative;
+            z-index: 2;
+            background-color: #fff;
+        }
+
+        /* The Spine / Thickness Effect (Right side for Hebrew) */
+        .book-wrapper::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            right: 0;
+            width: 15px; /* Spine thickness */
+            height: 100%;
+            background: linear-gradient(to left, #dcdcdc 0%, #ffffff 50%, #e0e0e0 100%);
+            transform-origin: right;
+            transform: rotateY(-90deg);
+            z-index: 1;
+            border-radius: 2px;
+            box-shadow: inset -2px 0 5px rgba(0,0,0,0.1);
         }
 
         /* Content Card */
@@ -142,8 +169,8 @@
         }
 
         .feature-icon {
-            width: 46px;
-            height: 46px;
+            width: 44px;
+            height: 44px;
             background: #fff;
             border-radius: 12px;
             display: flex;
@@ -161,7 +188,7 @@
             line-height: 1.2;
         }
 
-        /* Testimonial Section */
+        /* Testimonial Section - POLAROID FRAME */
         .auth-recommendations {
             margin: 45px 0;
             text-align: center;
@@ -180,12 +207,11 @@
             margin: 0 auto;
             aspect-ratio: 5 / 4; 
             background: #fff;
-            border: 6px solid #fff; 
-            border-radius: 20px;
+            border: 8px solid #fff; 
+            border-radius: 4px; /* More like a printed photo */
             overflow: hidden;
-            box-shadow: 0 20px 45px rgba(0,0,0,0.08); 
-            outline: 1px solid var(--wa-green-light); 
-            position: relative;
+            box-shadow: 0 15px 35px rgba(0,0,0,0.1); 
+            outline: 1px solid #eee;
         }
 
         .rec-image {
@@ -273,7 +299,7 @@
             box-shadow: 0 5px 15px rgba(0,0,0,0.1);
         }
 
-        /* SVG Basic Style */
+        /* SVG Fix */
         .svg-icon { 
             width: 24px;
             height: 24px;
@@ -315,8 +341,11 @@
             <h1>המתוקים בדרך למייל! ובינתיים... הזדמנות לשדרג את המטבח</h1>
         </header>
 
+        <!-- Fixed 3D Book Display Section -->
         <div class="book-container">
-            <img src="image.png" alt="ספר המתכונים המלא - רבקה הולצברג" class="book-3d">
+            <div class="book-wrapper">
+                <img src="image.png" alt="ספר המתכונים המלא - רבקה הולצברג" class="book-3d">
+            </div>
         </div>
 
         <main class="content-card">
@@ -328,7 +357,6 @@
             <div class="features-grid">
                 <div class="feature-box">
                     <div class="feature-icon">
-                        <!-- אייקון ספר -->
                         <svg class="svg-icon" viewBox="0 0 24 24"><path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20"></path><path d="M6.5 2H20v20H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2z"></path></svg>
                     </div>
                     <div class="feature-info">
@@ -338,7 +366,6 @@
                 </div>
                 <div class="feature-box">
                     <div class="feature-icon">
-                        <!-- אייקון צלחת/ארוחה -->
                         <svg class="svg-icon" viewBox="0 0 24 24"><path d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"></path></svg>
                     </div>
                     <div class="feature-info">
@@ -348,7 +375,6 @@
                 </div>
                 <div class="feature-box">
                     <div class="feature-icon">
-                        <!-- אייקון וידאו -->
                         <svg class="svg-icon" viewBox="0 0 24 24"><polygon points="5 3 19 12 5 21 5 3"></polygon></svg>
                     </div>
                     <div class="feature-info">
@@ -358,7 +384,6 @@
                 </div>
                 <div class="feature-box">
                     <div class="feature-icon">
-                        <!-- אייקון לב חדש - סגור ושלם -->
                         <svg class="svg-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z" stroke="currentColor" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round"/>
                         </svg>
@@ -410,7 +435,7 @@
                 </div>
 
                 <div style="margin-top: 40px;">
-                    <p style="color: var(--deep-green); font-weight: 700; font-size: 0.9rem;">המחיר יעלה בעוד:</p>
+                    <p style="color: var(--deep-green); font-weight: 700; font-size: 1rem;">המחיר יעלה בעוד:</p>
                     <div id="timer-val" class="timer-display">15:00</div>
                 </div>
             </div>
