Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -503,5 +503,7 @@
 
         window.onload = initOTO;
     </script>
+<script src="https://rivkaol.github.io/legal-footer.js"></script>
 </body>
 </html>
+
