--- a/index.html
+++ b/index.html
@@ -433,9 +433,9 @@
                 <p style="font-weight: 700; font-size: 1.4rem; margin-bottom: 10px;">בינינו?</p>
                 <p>החוברת הדיגיטלית מצוינת, אבל אין כמו ספר אמיתי שפתוח על השיש.</p>
                 
-                <!-- הדגשת היהלום - היתרון הפיזי -->
+                <!-- הדגשת היהלום - היתרון הפיזי בעיצוב יוקרתי -->
                 <div class="benefit-highlight-box">
-                    <strong>בלי מסך שנכבה באמצע, בלי לגלול בידיים מלוכלכות<br>פשוט לפתוח ולבשל בנחת.</strong>
+                    <strong>בלי מסך שנכבה באמצע, בלי לגלול בידיים מלוכלכות<br>ספר שנוח באמת לבשל ממנו ביום־יום</strong>
                 </div>
             </div>
 
