--- a/index.html
+++ b/index.html
@@ -535,15 +535,13 @@
                 </div>
 
                 <!-- טקסט סיפור - מוגדל וללא מקפים -->
-                <p class="story-text">המתכונים כאן נולדו מהצורך לבשל אחרת, אבל בלי לוותר על הטעם, ובלי להפוך את המטבח למעבדה.</p>
+                <p class="story-text">המתכונים כאן נולדו כי גיליתי שלא טוב לי לאכול קמחים רגילים, אבל לא הייתי מוכנה לוותר על הטעם או להפוך את המטבח למסובך.</p>
 
                 <!-- הדגשת היתרון הפיזי -->
                 <div class="benefit-highlight-box">
-                    בסופו של דבר,<br>
-                    אלה מתכונים שאפשר להכין באמצע החיים,<br>
-                    עם מרכיבים נגישים,<br>
-                    ושגם מי שאוכל איתך בבית<br>
-                    יגיד עליהם: “זה טעים”.
+                    בסוף, אלה מתכונים פשוטים,<br>
+                    עם מצרכים נגישים,<br>
+                    ושאוכלים אותם אומרים: “זה טעים”.
                 </div>
             </div>
 
