--- a/thanks.html
+++ b/thanks.html
@@ -508,5 +508,6 @@
         }
         window.onload = startTimer;
     </script>
+<script src="https://rivkaol.github.io/legal-footer.js"></script>
 </body>
 </html>
