--- a/thanks.html
+++ b/thanks.html
@@ -9,11 +9,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Assistant:wght@400;600;700;800&family=Rubik:wght@400;500;700;900&display=swap" rel="stylesheet">
     <style>
         :root {
-            --deep-green: #1B4D3E; /* צבע מקורי חי */
-            --luxury-gold: #D4AF37; /* זהב יוקרתי מקורי */
+            --deep-green: #1B4D3E;
+            --luxury-gold: #D4AF37;
             --soft-gold: #F2E6C2;
-            --bg-cream: #FDFBF7; /* קרם בהיר ובהיר */
-            --text-main: #1A1A1A; /* טקסט כהה וברור */
+            --bg-cream: #FDFBF7;
+            --text-main: #1A1A1A;
             --white: #ffffff;
             --error-red: #d9534f;
             --border-gray: #e0e0e0;
@@ -30,47 +30,47 @@
             font-family: 'Assistant', 'Rubik', sans-serif;
             background-color: var(--bg-cream);
             color: var(--text-main);
-            line-height: 1.9;
+            line-height: 1.8;
             font-size: var(--accessible-font-size);
             -webkit-font-smoothing: antialiased;
         }
 
         .container {
-            max-width: 800px;
+            max-width: 850px;
             margin: 0 auto;
-            padding: 30px 20px;
+            padding: 20px;
         }
 
         /* Top Header Badge */
         .top-status {
             text-align: center;
-            padding: 20px 0 30px;
+            padding: 30px 0;
         }
 
         .success-badge {
             display: inline-flex;
             align-items: center;
             justify-content: center;
-            gap: 15px;
+            gap: 12px;
             background: var(--white);
-            padding: 18px 40px;
+            padding: 12px 30px;
             border-radius: 100px;
             color: var(--deep-green);
-            border: 2px solid var(--deep-green);
-            margin-bottom: 30px;
-            box-shadow: 0 10px 25px rgba(0,0,0,0.04);
+            border: 1px solid var(--deep-green);
+            margin-bottom: 25px;
+            box-shadow: 0 5px 15px rgba(0,0,0,0.03);
         }
 
         .success-badge strong {
-            font-size: 1.3rem;
-            font-weight: 700;
+            font-size: 1.15rem;
+            font-weight: 600;
         }
 
         .check-circle {
             background: var(--deep-green);
             color: white;
-            width: 32px;
-            height: 32px;
+            width: 28px;
+            height: 28px;
             border-radius: 50%;
             display: flex;
             align-items: center;
@@ -85,94 +85,94 @@
         }
 
         .hero h1 {
-            font-size: clamp(2.5rem, 8vw, 4rem);
+            font-size: clamp(2.2rem, 7vw, 3.8rem);
             color: var(--deep-green);
             font-weight: 900;
-            line-height: 1.2;
-            margin-bottom: 15px;
+            line-height: 1.1;
+            margin-bottom: 10px;
         }
 
         .hero .subtitle {
-            font-size: 1.7rem;
+            font-size: 1.5rem;
             color: var(--luxury-gold);
             font-weight: 700;
             display: block;
-            margin-top: 10px;
         }
 
-        /* Form Cards */
+        /* Forms - Narrow and Focused Design */
         .form-box {
             background: var(--white);
             border-radius: 25px;
-            padding: 40px;
+            padding: 35px 40px;
             border: 1px solid var(--border-gray);
-            margin-bottom: 50px;
-            box-shadow: 0 15px 45px rgba(0,0,0,0.03);
+            margin: 0 auto 50px auto;
+            max-width: 580px; /* צמצום הרוחב למראה יוקרתי יותר */
+            box-shadow: 0 10px 40px rgba(0,0,0,0.03);
         }
 
         .form-box.highlight {
-            border: 3px solid var(--deep-green);
-            box-shadow: 0 30px 70px rgba(27, 77, 62, 0.1);
+            border: 2px solid var(--deep-green);
+            box-shadow: 0 20px 50px rgba(27, 77, 62, 0.08);
         }
 
         .form-box h3 {
-            font-size: 1.6rem;
+            font-size: 1.4rem;
             color: var(--deep-green);
             text-align: center;
-            margin-bottom: 30px;
+            margin-bottom: 25px;
             font-weight: 800;
+            line-height: 1.3;
         }
 
         .form-group {
-            margin-bottom: 25px;
+            margin-bottom: 20px;
         }
 
         .form-group label {
             display: block;
             font-weight: 700;
-            margin-bottom: 10px;
+            margin-bottom: 8px;
             color: var(--deep-green);
-            font-size: 1.3rem;
+            font-size: 1.15rem;
         }
 
         .form-control {
             width: 100%;
-            padding: 22px;
-            font-size: 1.4rem;
+            padding: 16px 20px;
+            font-size: 1.3rem;
             font-family: 'Assistant', sans-serif;
             border: 2px solid var(--border-gray);
-            border-radius: 18px;
-            transition: all 0.3s ease;
+            border-radius: 14px;
+            transition: all 0.2s ease;
             background: #fdfdfd;
-            color: var(--text-main);
         }
 
         .form-control:focus {
             outline: none;
             border-color: var(--luxury-gold);
             background: var(--white);
-            box-shadow: 0 0 0 5px rgba(212, 175, 55, 0.05);
+            box-shadow: 0 0 0 4px rgba(212, 175, 55, 0.05);
         }
 
         .submit-btn {
             width: 100%;
             background: var(--luxury-gold);
             color: var(--white);
-            padding: 25px;
-            font-size: 1.8rem;
+            padding: 20px;
+            font-size: 1.6rem;
             font-family: 'Assistant', sans-serif; 
             font-weight: 800;
             border: none;
-            border-radius: 20px;
+            border-radius: 16px;
             cursor: pointer;
-            box-shadow: 0 15px 35px rgba(212, 175, 55, 0.3);
+            box-shadow: 0 8px 20px rgba(212, 175, 55, 0.2);
             margin-top: 10px;
             transition: all 0.3s ease;
         }
 
         .submit-btn:hover:not(:disabled) {
-            transform: translateY(-4px);
-            box-shadow: 0 20px 45px rgba(212, 175, 55, 0.4);
+            transform: translateY(-3px);
+            box-shadow: 0 12px 25px rgba(212, 175, 55, 0.3);
         }
 
         .submit-btn:disabled {
@@ -183,104 +183,103 @@
         /* Features Section */
         .intro-section {
             text-align: center;
-            margin-bottom: 50px;
+            margin-bottom: 45px;
+            padding: 0 20px;
         }
 
         .intro-section h2 {
-            font-size: 2.1rem;
+            font-size: 1.8rem;
             font-weight: 800;
             color: var(--deep-green);
-            margin-bottom: 25px;
+            margin-bottom: 20px;
+        }
+
+        .feature-list {
+            max-width: 650px;
+            margin: 0 auto 50px auto;
         }
 
         .feature-item {
             display: flex;
-            gap: 25px;
-            padding: 30px 20px;
+            gap: 20px;
+            padding: 25px;
             background: var(--white);
-            border-radius: 20px;
-            margin-bottom: 20px;
-            border: 1px solid #f0f0f0;
+            border-radius: 18px;
+            margin-bottom: 15px;
+            border: 1px solid #f2f2f2;
             align-items: center;
-            box-shadow: 0 5px 15px rgba(0,0,0,0.02);
         }
 
         .feature-icon-box {
             background: var(--bg-cream);
             color: var(--luxury-gold);
-            width: 75px;
-            height: 75px;
-            border-radius: 18px;
+            width: 60px;
+            height: 60px;
+            border-radius: 14px;
             display: flex;
             align-items: center;
             justify-content: center;
             flex-shrink: 0;
-            border: 1px solid rgba(212, 175, 55, 0.2);
+            border: 1px solid rgba(212, 175, 55, 0.1);
         }
 
         .feature-text h4 {
-            font-size: 1.5rem;
+            font-size: 1.35rem;
             color: var(--deep-green);
             font-weight: 800;
-            margin-bottom: 5px;
+            margin-bottom: 4px;
         }
 
         .feature-text p {
-            font-size: 1.25rem;
-            color: #333;
+            font-size: 1.15rem;
+            color: #444;
+            line-height: 1.5;
         }
 
-        /* Bottom Price & Timer */
-        .price-section {
-            text-align: center;
-            margin-bottom: 30px;
-        }
-
+        /* Bottom Section */
         .price-tag {
-            font-size: 5.5rem;
+            font-size: 5rem;
             font-weight: 900;
             color: var(--deep-green);
             line-height: 1;
-            margin: 15px 0;
+            margin: 10px 0;
         }
 
         .price-tag span {
-            font-size: 2.5rem;
+            font-size: 2rem;
             vertical-align: super;
         }
 
         .timer-val {
-            font-size: 3.5rem;
+            font-size: 3rem;
             font-weight: 900;
             color: var(--white);
             background: var(--deep-green);
             display: inline-block;
-            padding: 10px 45px;
-            border-radius: 20px;
-            margin-top: 20px;
-            letter-spacing: 2px;
-            box-shadow: 0 10px 30px rgba(27, 77, 62, 0.2);
+            padding: 8px 35px;
+            border-radius: 15px;
+            margin-top: 15px;
+            box-shadow: 0 8px 20px rgba(27, 77, 62, 0.15);
         }
 
         .error-msg {
             color: var(--error-red);
-            font-size: 1.1rem;
-            margin-top: 8px;
+            font-size: 0.95rem;
+            margin-top: 6px;
             display: none;
             font-weight: 700;
         }
 
         @media (max-width: 600px) {
-            body { font-size: 20px; }
-            .hero h1 { font-size: 2.6rem; }
-            .form-box { padding: 35px 20px; }
-            .feature-item { flex-direction: column; text-align: center; padding: 25px; }
-            .submit-btn { font-size: 1.5rem; }
-            .timer-val { font-size: 2.8rem; }
+            .container { padding: 15px; }
+            .form-box { padding: 30px 20px; }
+            .hero h1 { font-size: 2.2rem; }
+            .feature-item { flex-direction: column; text-align: center; }
+            .timer-val { font-size: 2.5rem; }
         }
 
         .svg-icon {
-            width: 38px; height: 38px;
+            width: 32px; height: 32px;
             fill: none; stroke: currentColor; stroke-width: 2.5;
             stroke-linecap: round; stroke-linejoin: round;
         }
@@ -293,11 +292,11 @@
         <header class="top-status">
             <div class="success-badge">
                 <div class="check-circle">
-                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="4"><polyline points="20 6 9 17 4 12"></polyline></svg>
+                    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="4"><polyline points="20 6 9 17 4 12"></polyline></svg>
                 </div>
                 <strong>איזה כיף! חוברת המתוקים בדרך אלייך</strong>
             </div>
-            <p style="font-weight: 600; color: #555; font-size: 1.4rem;">רגע לפני שאת מתחילה... בואי נעשה סדר אמיתי במטבח 👇</p>
+            <p style="font-weight: 600; color: #555; font-size: 1.25rem;">רגע לפני שאת מתחילה... בואי נעשה סדר אמיתי במטבח 👇</p>
         </header>
 
         <section class="hero">
@@ -370,10 +369,10 @@
 
         <!-- Main Form Card (Bottom) -->
         <div class="form-box highlight" id="order">
-            <div class="price-section">
-                <span style="font-weight: 700; color: var(--luxury-gold); font-size: 1.35rem;">הטבה בלעדית לזמן מוגבל:</span>
+            <div style="text-align: center; margin-bottom: 25px;">
+                <span style="font-weight: 700; color: var(--luxury-gold); font-size: 1.2rem;">הטבה בלעדית לזמן מוגבל:</span>
                 <div class="price-tag">37<span>₪</span></div>
-                <p style="color: #666; font-size: 1.2rem; font-weight: 600;">גישה קבועה להדרכה לכל החיים</p>
+                <p style="color: #666; font-size: 1.05rem; font-weight: 600;">גישה קבועה להדרכה לכל החיים</p>
             </div>
 
             <form class="otoFormClass" data-form="bottom" novalidate>
@@ -397,13 +396,13 @@
                 </button>
             </form>
 
-            <div style="text-align: center; margin-top: 40px; border-top: 1px solid #EEE; padding-top: 35px;">
-                <p style="font-weight: 800; color: var(--deep-green); font-size: 1.5rem;">המחיר יעלה בעוד:</p>
+            <div style="text-align: center; margin-top: 35px; border-top: 1px solid #EEE; padding-top: 30px;">
+                <p style="font-weight: 800; color: var(--deep-green); font-size: 1.3rem;">המחיר יעלה בעוד:</p>
                 <div id="timer-val" class="timer-val">15:00</div>
             </div>
         </div>
 
-        <footer style="text-align: center; padding: 50px 0; color: #888; font-size: 1.1rem;">
+        <footer style="text-align: center; padding: 40px 0; color: #888; font-size: 1rem;">
             <p>© רבקה הולצברג - בריאות שבאה מהטבע</p>
         </footer>
 
@@ -480,7 +479,6 @@
             });
         });
 
-        // Countdown Timer Logic
         const DURATION = 15 * 60;
         function startTimer() {
             const display = document.getElementById('timer-val');
