--- a/thanks.html
+++ b/thanks.html
@@ -136,7 +136,7 @@
         .testimonial-card { background: #fff; padding: 12px; border-radius: 20px; box-shadow: 0 15px 40px rgba(0,0,0,0.06); max-width: 480px; margin: 0 auto; border: 1px solid var(--border-light); transform: rotate(-1deg); }
         .testimonial-img { width: 100%; height: auto; border-radius: 10px; display: block; }
 
-        .pricing-box { background: #fff; border-radius: 40px; padding: 50px 30px; text-align: center; border: 3px solid var(--border-light); margin-top: 40px; }
+        .pricing-box { background: #fff; border-radius: 40px; padding: 50px 30px; text-align: center; border: 3px solid var(--border-light); margin-top: 40px; box-shadow: 0 10px 30px rgba(0,0,0,0.02); }
         .price-badge { background: #FDF9EC; color: var(--luxury-gold); padding: 12px 30px; border-radius: 50px; font-size: 1.2rem; font-weight: 800; margin-bottom: 25px; display: inline-block; border: 1px solid rgba(212, 175, 55, 0.3); }
         .price-display { font-size: 6.5rem; font-weight: 900; line-height: 1; margin-bottom: 40px; display: flex; justify-content: center; align-items: flex-start; }
         .currency { font-size: 2.5rem; margin-top: 20px; margin-right: 15px; }
@@ -187,7 +187,7 @@
 
     <h1>המתוקים הם התחלה נפלאה, אבל מה עם השקט של שאר היום?</h1>
     <p class="bridge-text">
-        חוברת המתוקים היא הצעד הראשון... אבל כדי להרגיש שינוי אמיתי באנרגיה שלך ולדעת שתמיד יש לך משהו בריא וטעים בבית, את צריכה את ארגז הכלים המלא. הכל מחכה לך בספר אחד, מוחשי וברור.
+        חוברת המתוקים היא הצעד הראשון... אבל כדי להרגיש <span class="gold-line">שינוי אמיתי</span> באנרגיה שלך ולדעת שתמיד יש לך פתרון בריא וטעים בבית, את צריכה את <span class="gold-line">ארגז הכלים המלא</span>. הכל מחכה לך בספר אחד, מוחשי וברור.
     </p>
 
     <div class="book-container">
@@ -257,10 +257,6 @@
                     <svg width="22" height="22" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M5 9V7a5 5 0 0110 0v2a2 2 0 012 2v5a2 2 0 01-2 2H5a2 2 0 01-2-2v-5a2 2 0 012-2zm8-2v2H7V7a3 3 0 016 0z" clip-rule="evenodd"></path></svg>
                     סליקה מאובטחת
                 </div>
-                <div class="trust-item">
-                    <svg width="22" height="22" fill="currentColor" viewBox="0 0 20 20"><path d="M8 16.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zM15 16.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0z"></path><path d="M3 4a1 1 0 00-1 1v10a1 1 0 001 1h1.05a2.5 2.5 0 014.9 0H10a1 1 0 001-1V5a1 1 0 00-1-1H3zM14 7h-3v7h3.05a2.5 2.5 0 014.9 0H19a1 1 0 001-1V7a1 1 0 00-1-1h-5z"></path></svg>
-                    משלוח מהיר הביתה
-                </div>
             </div>
 
             <div class="timer-container">
@@ -287,12 +283,12 @@
         const statusText = document.getElementById('offer-status');
         const actionLinks = document.querySelectorAll('.main-link-element');
 
-        let targetTime = localStorage.getItem('oto_timer_v11_final');
+        let targetTime = localStorage.getItem('oto_timer_v13_sweets');
         const currentTime = Math.floor(Date.now() / 1000);
 
         if (!targetTime || (currentTime > targetTime && (currentTime - targetTime) > 7200)) { 
             targetTime = currentTime + DURATION_SECONDS;
-            localStorage.setItem('oto_timer_v11_final', targetTime);
+            localStorage.setItem('oto_timer_v13_sweets', targetTime);
         }
 
         const countdownInterval = setInterval(() => {
